add validators and update of application
