# src/config/swaggerConfig.json
@@ -142,6 +142,9 @@
                 },
                 "coverLetter": {
                   "example": "any"
+                },
+                "applicationStateId": {
+                  "example": "any"
                 }
               }
             }
@@ -156,6 +159,9 @@
           },
           "403": {
             "description": "Forbidden"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -191,6 +197,75 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "job": {
+                  "example": "any"
+                },
+                "company": {
+                  "example": "any"
+                },
+                "jobOfferUrl": {
+                  "example": "any"
+                },
+                "applicationDate": {
+                  "example": "any"
+                },
+                "cv": {
+                  "example": "any"
+                },
+                "coverLetter": {
+                  "example": "any"
+                },
+                "applicationStateId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
