# src/controllers/applications.controller.ts
@@ -1,5 +1,7 @@
 import { Request, Response } from 'express'
 import { ApplicationsServices } from '@/services/applications.services'
+import { validationResult } from 'express-validator'
+import { EApplicationState } from '@/shared/types'
 
 export class ApplicationsController {
   public static async getAllApplications(_: Request, res: Response) {
@@ -13,6 +15,11 @@ export class ApplicationsController {
 
   public static async getApplicationById(req: Request, res: Response) {
     const { id } = req.params
+    const errors = validationResult(req)
+
+    if (!errors.isEmpty()) {
+      return res.status(422).json(errors.array())
+    }
 
     try {
       const application = await ApplicationsServices.getApplicationById(+id)
@@ -29,12 +36,12 @@ export class ApplicationsController {
 
   public static async createApplication(req: Request, res: Response) {
     const user = req.user
+    const errors = validationResult(req)
+    const { id, job, company, jobOfferUrl, applicationDate, cv, coverLetter, applicationStateId } = req.body
 
-    const { id, job, company, jobOfferUrl, applicationDate, cv, coverLetter } = req.body
-
-    // if (!id || !job || !company || !jobOfferUrl || !applicationDate || !cv || !coverLetter) {
-    //   return res.status(400).json({ message: 'Missing fields' })
-    // }
+    if (!errors.isEmpty()) {
+      return res.status(422).json(errors.array())
+    }
 
     try {
       const application = await ApplicationsServices.createApplication({
@@ -45,9 +52,40 @@ export class ApplicationsController {
         applicationDate,
         cv,
         coverLetter,
-        userId: user.id
+        userId: user.id,
+        applicationStateId: applicationStateId || EApplicationState.applied
       })
       return res.status(201).json(application)
+    } catch (error) {
+      return res.status(500).json({ message: error })
+    }
+  }
+
+  public static async updateApplication(req: Request, res: Response) {
+    const { id } = req.params
+    const errors = validationResult(req)
+    const { job, company, jobOfferUrl, applicationDate, cv, coverLetter, applicationStateId } = req.body
+
+    if (!errors.isEmpty()) {
+      return res.status(422).json(errors.array())
+    }
+
+    try {
+      const application = await ApplicationsServices.updateApplication(+id, {
+        job,
+        company,
+        jobOfferUrl,
+        applicationDate,
+        cv,
+        coverLetter,
+        applicationStateId: applicationStateId || EApplicationState.applied
+      })
+
+      if (application) {
+        return res.status(200).json(application)
+      }
+
+      return res.status(404).json({ message: 'Application not found' })
     } catch (error) {
       return res.status(500).json({ message: error })
     }
